--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,10 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "tsnd --respawn --transpile-only --exit-child src/server.ts"
+    "dev": "nodemon -L src/server.ts"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
-    "@types/axios": "^0.14.0",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,8 +17,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "nodemon": "^2.0.20",
     "prima": "^0.0.1",
     "prisma": "^4.3.1",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.3"
   }
