--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon -L src/server.ts"
+    "dev": "nodemon -L src/server.ts",
+    "start" : "node build/server.js"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
