--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,6 @@ COPY package.json ./
 
 COPY prisma ./prisma/
 
-COPY .env ./
 
 COPY tsconfig.json ./
 
@@ -18,4 +17,4 @@ RUN npx prisma generate
 
 EXPOSE 3333
 
-CMD ["npm", "run", "dev"]
+CMD ["npm", "run", "build"]
