--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "nodemon -L src/server.ts",
-    "start" : "node build/server.js"
+    "start" : "node src/server.js"
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
