--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,7 +6,7 @@ COPY package.json ./
 
 COPY prisma ./prisma/
 
-
+#COPY .env ./
 
 COPY tsconfig.json ./
 
@@ -15,6 +15,8 @@ COPY . .
 RUN npm install
 
 RUN npx prisma generate
+
+RUN npx prisma migrate deploy
 
 EXPOSE 3333
 
